# stardew-valley-automator

./: .gitignore  README.md  StardewAgent.sln
agent/: pyproject.toml
agent/src/stardew_agent/: __init__.py  agent_planner.py  cli.py  client.py  goals.py  memory.py  models.py  orchestration.py  planning.py  replay.py  session.py  validation.py
agent/src/stardew_agent/prompts/: builder.py  system.txt
agent/src/stardew_agent/providers/: __init__.py  base.py  openai.py
agent/tests/: conftest.py  test_client.py  test_goals.py  test_memory.py  test_planner_dto.py  test_planning.py  test_prompts.py  test_session.py  test_validation.py
docs/: actions.md  architecture.md  protocol.md  testing.md
fixtures/observations/: dry-crop.json
fixtures/plans/: water-one.json
schemas/: action-plan.schema.json  execution-result.schema.json  observation.schema.json  protocol.schema.json
src/StardewAgent.Core/: StardewAgent.Core.csproj
src/StardewAgent.Core/Execution/: ExecutionBudget.cs  ExecutionState.cs
src/StardewAgent.Core/Navigation/: AStarPathPlanner.cs  InteractionPlanner.cs  NavigationModels.cs
src/StardewAgent.Mod/: ModEntry.cs  StardewAgent.Mod.csproj  manifest.json
src/StardewAgent.Mod/Execution/: PlanExecutor.cs
src/StardewAgent.Mod/Game/: GameFacade.cs  IGameFacade.cs
src/StardewAgent.Mod/Navigation/: GameNavigationGrid.cs  MovementController.cs
src/StardewAgent.Protocol/: Envelopes.cs  JsonDefaults.cs  Models.cs  PlanValidation.cs
tests/StardewAgent.Core.Tests/: ExecutionTests.cs  NavigationTests.cs  StardewAgent.Core.Tests.csproj
tests/StardewAgent.Protocol.Tests/: ProtocolTests.cs  StardewAgent.Protocol.Tests.csproj
(+4 files in other folders)
