[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "stardew-agent"
version = "0.1.0"
description = "Safe external runtime for the Stardew Valley SMAPI agent"
readme = "../README.md"
requires-python = ">=3.11"
dependencies = [
  "jsonschema[format]>=4.23,<5",
  "pydantic>=2.9,<3"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9",
  "pytest-asyncio>=0.24,<1",
  "ruff>=0.7,<1"
]

[project.scripts]
stardew-agent = "stardew_agent.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/stardew_agent"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
